# softlex

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  export_data.py  import_data.py  pyproject.toml  pytest.ini
softlex/: manage.py
softlex/softlex/: asgi.py  settings.py  urls.py  wsgi.py
softlex/static/css/: style.css
softlex/staticfiles/css/: style.css
softlex/templates/: base.html  home.html
softlex/templates/includes/: navbar.html
softlex/templates/testcases/: project_confirm_delete.html  project_detail.html  project_edit.html  project_list.html  testcase_confirm_delete.html  testcase_detail.html  testcase_edit.html  testcase_list.html
softlex/templates/users/: login.html  profile.html  register.html  user_detail.html  user_edit.html  user_list.html
softlex/testcases/: forms.py  mixins.py  models.py  urls.py  utils.py  views.py
softlex/testcases/migrations/: 0001_initial.py  0002_initial.py  0003_projectmember.py  0004_auto_20251015_1932.py
softlex/users/: forms.py  models.py  urls.py  views.py
softlex/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_last_login_date.py  0004_alter_user_role.py  0005_update_blocked_users.py  0006_alter_user_first_name_alter_user_last_name.py
static/: README.md
tests/: README.md  __init__.py  conftest.py  pytest.ini
tests/testcases/: __init__.py  test_project_models.py
tests/users/: __init__.py  test_user_forms.py  test_user_models.py  test_user_views.py
