[project]
name = "softlex"
version = "0.1.0"
description = "A simple and reliable open source test management system."
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.6",
    "psycopg2-binary>=2.9.10",
    "django-htmx>=1.19.0",
    "django-environ>=0.11.2",
    "openpyxl>=3.1.2",
]
