[project]
name = "softlex"
version = "0.1.0"
description = "A simple and reliable open source test management system."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "psycopg2-binary>=2.9.10",
    "django-htmx>=1.19.0",
    "django-environ>=0.11.2",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-watch>=4.2.0",
    "pytest-mock>=3.10.0",
    "pytest-html>=3.1.0",
    "pytest-sugar>=0.9.7",
    "factory-boy>=3.2.0",
    "freezegun>=1.2.0",
    "responses>=0.23.0",
    "coverage>=7.0.0",
]
dev = [
    "softlex[test]",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
